<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".HelpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/help_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/read_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_help_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/read_help_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/read_help_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/write_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/write_help_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/write_help_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/write_help_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/copy_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/copy_help_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/copy_help_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/copy_help_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/change_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/change_help_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/change_help_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/change_help_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                android:id="@+id/remove_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/remove_help_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/remove_help_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/remove_help_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/erase_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/erase_help_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/erase_help_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/erase_help_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>